# esorics2026

./: .gitignore  CLAUDE.md  LICENCE  README.md  datenschutz.html  impressum.html  index.html  main.py  providers.html  pyproject.toml  run_all.sh  security.html
.github/workflows/: ci.yml  deploy.yml
css/: content.css  map.css  shared.css
data/at/: overrides.json  provider_overrides.json
data/ch/: overrides.json  security_overrides.json
data/de/: E-Mail-Liste_alex.csv  municipalities_de_livenson.json  municipalities_destatis.json  overrides.json  security_overrides.json
domains/: at.json  at_detailed.json  at_review.json  ch.json  ch_detailed.json  ch_review.json
js/: map-providers.js  map-security.js  map-shared.js  nav.js
maps/: at.html  ch.html  de.html  index.html  providers.html  security.html
maps/css/: map.css
maps/js/: map-providers.js  map-shared.js  nav.js
maps/topo/: at-gemeinden.json
output/: export.xlsx
output/accuracy/: accuracy_report.json
output/domains/: domains_at.json  domains_at_detailed.json  domains_at_review.json  domains_ch.json  domains_ch_detailed.json  domains_ch_review.json  domains_de.json  domains_de_review.json
output/providers/: providers_at.json  providers_at.min.json  providers_ch.json  providers_ch.min.json
output/security/: AT_Result.json  CH_Result.json  DE_Result.json  security_at.json  security_ch.json
scripts/: cloud-config.yaml  convert_results.py  setup_vm.sh
src/mail_municipalities/: cli.py  export.py
src/municipality_email/: cache.py  cli.py  content.py  dns.py  filtering.py  log.py  pipeline.py  schemas.py  scraping.py
src/security_test/: .env.template  .gitignore  README.md  docker-compose.yaml
tests/: conftest.py  test_accuracy.py  test_cache.py  test_cli.py  test_clients.py  test_clients_async.py  test_content.py  test_dns.py  test_export.py  test_filtering.py  test_log.py  test_output_validation.py  test_pipeline.py  test_pipeline_async.py  test_pipeline_run.py  test_schemas.py  test_scraping.py  test_scraping_async.py  test_static_loaders.py
tests/analysis/: test_adhoc.py  test_charts.py  test_helpers.py  test_merged_combined.py  test_security_combined.py  test_security_latex.py
tests/core/: test_dns.py  test_log.py
tests/countries/: test_austria.py  test_collect.py  test_germany.py  test_switzerland.py
tests/domain_resolver/: test_cache.py  test_cli.py  test_clients.py  test_clients_async.py  test_content.py  test_filtering.py  test_output_validation.py  test_pipeline.py  test_pipeline_async.py  test_pipeline_run.py  test_schemas.py  test_scraping.py  test_scraping_async.py  test_static_loaders.py
tests/provider_classification/: test_analyze.py  test_classifier.py  (+10 more)
topo/: de-gemeinden.json
(+115 files in other folders)
