[project]
name = "municipality-email"
version = "0.1.0"
description = "Automated collection of email domains for municipalities in CH, DE, AT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-slugify>=8.0.4",
    "stamina>=25.2.0",
    "tldextract>=5.3.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/municipality_email"]

[project.scripts]
resolve = "municipality_email.cli:resolve"
classify = "municipality_email.cli:classify"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["mx: tests that perform live DNS MX lookups (may be slow)"]

[tool.coverage.run]
source = ["municipality_email"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = ["pragma: no cover"]

[tool.ruff]
line-length = 99
